// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreadPanel Header expect that All filter for ThreadPanelHeader properly renders Show: All threads 1`] = `
<DocumentFragment>
  <div
    class="mx_BaseCard_header_title"
  >
    <h4
      class="mx_Heading_h4 mx_BaseCard_header_title_heading"
    >
      Threads
    </h4>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="mx_AccessibleButton mx_ThreadPanel_dropdown"
      role="button"
      tabindex="0"
    >
      Show: All threads
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThreadPanel Header expect that My filter for ThreadPanelHeader properly renders Show: My threads 1`] = `
<DocumentFragment>
  <div
    class="mx_BaseCard_header_title"
  >
    <h4
      class="mx_Heading_h4 mx_BaseCard_header_title_heading"
    >
      Threads
    </h4>
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class="mx_AccessibleButton mx_ThreadPanel_dropdown"
      role="button"
      tabindex="0"
    >
      Show: My threads
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThreadPanel Header expect that ThreadPanelHeader has the correct option selected in the context menu 1`] = `
<div
  aria-checked="true"
  class="mx_AccessibleButton mx_ThreadPanel_Header_FilterOptionItem focus-visible"
  data-focus-visible-added=""
  role="menuitemradio"
  tabindex="0"
>
  <span>
    All threads
  </span>
  <span>
    Shows all threads from current room
  </span>
</div>
`;
